# Seep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: index.html
scripts/: collect-tools.sh
server/: __main__.py  cli.py  config.py
server/agent/: composer.py
server/agent/checks/: _base.ps1  always_install.ps1  autoruns.ps1  directory_tree.ps1  dll_hijack.ps1  network.ps1  patches.ps1  processes.ps1  quick_wins.ps1  registry_secrets.ps1  scheduled_tasks.ps1  services.ps1  software.ps1  system_info.ps1  unattend_files.ps1  user_privileges.ps1  web_configs.ps1
server/agent/templates/: agent_wrapper.ps1
server/catalog/: loader.py  manager.py  schemas.py  tools.yaml
server/http/: serve.py  tls.py
server/report/: generator.py  recommendations.py
server/results/: parser.py
tests/: conftest.py  test_agent_composer.py  test_catalog_loader.py  test_catalog_manager.py  test_cli.py  test_composer.py  test_config.py  test_http_serve.py  test_http_server.py  test_integration.py  test_recommendations.py  test_report_generator.py  test_results_parser.py
tests/fixtures/: sample_results.json
